# ServerStatus-RustL

./: .dockerignore  .gitignore  Dockerfile  MAC_HANDOFF_PROMPT.md  README.md  config.toml  docker-compose.build.yml  docker-compose.yml
.github/workflows/: docker.yml  release.yml
client/: Cargo.toml  pyproject.toml
client/src/: grpc.rs  main.rs  status.rs  sys_info.rs
common/: Cargo.toml  build.rs
common/proto/: server_status.proto
common/src/: lib.rs
scripts/: gen_certs.sh  one-touch.sh  status.sh
server/: Cargo.toml  pyproject.toml
server/src/: admin.rs  assets.rs  auth.rs  config.rs  expiry.rs  http.rs  jinja.rs  jwt.rs  main.rs  payload.rs  stats.rs
server/src/notifier/: bark.rs  email.rs  mod.rs  tgbot.rs  webhook.rs  wechat.rs
systemd/: stat_client.service  stat_server.service
web/: admin.html  asset-manifest.json  index.html
web/jinja/: client-init.jinja.sh
web/static/css/: admin.css  expiry.css
web/static/js/: admin.js  expiry.js
