[project]
name = "stat_server"
readme = "../README.md"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin"

[project.urls]
Homepage = "https://github.com/Luke9570/ServerStatus-RustL"
Documentation = "https://github.com/Luke9570/ServerStatus-RustL#readme"
Repository = "https://github.com/Luke9570/ServerStatus-RustL"
Issues = "https://github.com/Luke9570/ServerStatus-RustL/issues"
# Changelog = "https://github.com/Luke9570/ServerStatus-RustL/releases"
